--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -2,5 +2,5 @@
     margin: 0px;
     padding: 0px;
     text-align: center;   
-    /* background-color: gray; */
+    background-color: lightgray;
 }
